--- a/Authentication/Authentication.csproj
+++ b/Authentication/Authentication.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk" ProjectGUID="9204df9e-27c1-42b3-bc63-3783f247892f">
   <PropertyGroup Label="Globals">
-    <SccProjectName>SAK</SccProjectName>
-    <SccProvider>SAK</SccProvider>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccLocalPath>SAK</SccLocalPath>
+    <SccProjectName></SccProjectName>
+    <SccProvider></SccProvider>
+    <SccAuxPath></SccAuxPath>
+    <SccLocalPath></SccLocalPath>
   </PropertyGroup>
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
