--- a/Authentication.iOS/Authentication.iOS.csproj
+++ b/Authentication.iOS/Authentication.iOS.csproj
@@ -13,10 +13,14 @@
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>Authentication.iOS</AssemblyName>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -58,16 +62,16 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Firebase.iOS.Auth">
-      <Version>8.10.0.3</Version>
+      <Version>8.10.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Firebase.iOS.CloudMessaging">
-      <Version>8.10.0.1</Version>
+      <Version>8.10.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Firebase.iOS.Core">
-      <Version>8.10.0.3</Version>
+      <Version>8.10.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Google.iOS.SignIn">
-      <Version>5.0.2.4</Version>
+      <Version>5.0.2.2</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Facebook.iOS">
       <Version>9.0.1.5</Version>
