--- a/Authentication.Android/Authentication.Android.csproj
+++ b/Authentication.Android/Authentication.Android.csproj
@@ -84,6 +84,9 @@
     <PackageReference Include="Xamarin.GooglePlayServices.Drive">
       <Version>117.0.0.1</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Build.Download">
+      <Version>0.11.2</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\strings.xml" />
