--- a/Map.Android/Map.Android.csproj
+++ b/Map.Android/Map.Android.csproj
@@ -67,6 +67,9 @@
       <Version>4.5.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.3.1.1" />
+    <PackageReference Include="Xamarin.Build.Download">
+      <Version>0.11.3</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms.Maps">
       <Version>5.0.0.2545</Version>
     </PackageReference>
