--- a/DestoPesto/DestoPesto.Android/Properties/AndroidManifest.xml
+++ b/DestoPesto/DestoPesto.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="202301021" package="com.arionsoftware.destopesto" android:installLocation="preferExternal" android:versionName="JAN23">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="202305081" package="com.arionsoftware.destopesto" android:installLocation="preferExternal" android:versionName="MAY23">
 	<uses-sdk android:minSdkVersion="26" android:targetSdkVersion="33" />
 	<application android:label="DestoPesto.Android" android:theme="@style/MainTheme" android:usesCleartextTraffic="true" android:icon="@drawable/ic_launcher">
 		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDJKku7UEvOakL0DEzayNAB_KBp2yIXTP4" />
@@ -32,7 +32,7 @@
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 	<uses-permission android:name="android.permission.CONTROL_LOCATION_UPDATES" />
 	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.CAPTURE_SECURE_VIDEO_OUTPUT" />
