--- a/DestoPesto/DestoPesto.Android/DestoPesto.Android.csproj
+++ b/DestoPesto/DestoPesto.Android/DestoPesto.Android.csproj
@@ -312,5 +312,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\applelogo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\email.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
