--- a/DestoPesto/DestoPesto.iOS/DestoPesto.iOS.csproj
+++ b/DestoPesto/DestoPesto.iOS/DestoPesto.iOS.csproj
@@ -74,6 +74,9 @@
     <CodesignKey>iPhone Developer</CodesignKey>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'Default' ">
+    <AppExtensionDebugBundleId />
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="ImageResizer.cs" />
