--- a/DestoPesto/DestoPesto.Android/Properties/AndroidManifest.xml
+++ b/DestoPesto/DestoPesto.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="202305231" package="com.arionsoftware.destopesto" android:installLocation="preferExternal" android:versionName="MAY23.9">
 	<uses-sdk android:minSdkVersion="27" android:targetSdkVersion="33" />
-	<application android:label="Δες το Πες το" android:theme="@style/MainTheme" android:usesCleartextTraffic="true" android:icon="@drawable/destopesto_icon">
+	<application android:label="Δες το Πες το" android:theme="@style/MainTheme" android:usesCleartextTraffic="true" android:icon="@mipmap/ic_launcher" >
 		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDJKku7UEvOakL0DEzayNAB_KBp2yIXTP4" />
 		<meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id" />
 		<meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_client_token" />
