--- a/DestoPesto/DestoPesto/DestoPesto.csproj
+++ b/DestoPesto/DestoPesto/DestoPesto.csproj
@@ -77,9 +77,67 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="ButtonCircleBig.png" />
+    <None Remove="Images\applelogo.png" />
+    <None Remove="Images\destopesto_icon.png" />
+    <None Remove="Images\destopesto_logo_square_blue.png" />
+    <None Remove="Images\destopesto_logo_square_solo_white.png" />
+    <None Remove="Images\email.png" />
+    <None Remove="Images\facebook.png" />
+    <None Remove="Images\google_logo.png" />
+    <None Remove="Images\icon.png" />
+    <None Remove="Images\iconDark.png" />
+    <None Remove="Images\iconSplash.png" />
+    <None Remove="Images\icon_about.png" />
+    <None Remove="Images\icon_feed.png" />
+    <None Remove="Images\icon_round.png" />
+    <None Remove="Images\ic_launcher.png" />
+    <None Remove="Images\key.png" />
+    <None Remove="Images\Login_Header.png" />
+    <None Remove="Images\logoback.png" />
+    <None Remove="Images\logout.png" />
+    <None Remove="Images\logo_landscape_blue_back.png" />
+    <None Remove="Images\mail.png" />
+    <None Remove="Images\map.png" />
+    <None Remove="Images\password.png" />
+    <None Remove="Images\pin.png" />
+    <None Remove="Images\pin_drop.png" />
+    <None Remove="Images\settings.png" />
+    <None Remove="Images\twitter.png" />
+    <None Remove="Images\user.png" />
+    <None Remove="Images\wifi.png" />
+    <None Remove="Images\xamarin_logo.png" />
     <None Remove="Xamarin.Forms.Maps" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="ButtonCircleBig.png" />
+    <EmbeddedResource Include="Images\applelogo.png" />
+    <EmbeddedResource Include="Images\destopesto_icon.png" />
+    <EmbeddedResource Include="Images\destopesto_logo_square_blue.png" />
+    <EmbeddedResource Include="Images\destopesto_logo_square_solo_white.png" />
+    <EmbeddedResource Include="Images\email.png" />
+    <EmbeddedResource Include="Images\facebook.png" />
+    <EmbeddedResource Include="Images\google_logo.png" />
+    <EmbeddedResource Include="Images\icon.png" />
+    <EmbeddedResource Include="Images\iconDark.png" />
+    <EmbeddedResource Include="Images\iconSplash.png" />
+    <EmbeddedResource Include="Images\icon_about.png" />
+    <EmbeddedResource Include="Images\icon_feed.png" />
+    <EmbeddedResource Include="Images\icon_round.png" />
+    <EmbeddedResource Include="Images\ic_launcher.png" />
+    <EmbeddedResource Include="Images\key.png" />
+    <EmbeddedResource Include="Images\login_header.png" />
+    <EmbeddedResource Include="Images\logoback.png" />
+    <EmbeddedResource Include="Images\logout.png" />
+    <EmbeddedResource Include="Images\logo_landscape_blue_back.png" />
+    <EmbeddedResource Include="Images\mail.png" />
+    <EmbeddedResource Include="Images\map.png" />
+    <EmbeddedResource Include="Images\password.png" />
+    <EmbeddedResource Include="Images\pin.png" />
+    <EmbeddedResource Include="Images\pin_drop.png" />
+    <EmbeddedResource Include="Images\settings.png" />
+    <EmbeddedResource Include="Images\twitter.png" />
+    <EmbeddedResource Include="Images\user.png" />
+    <EmbeddedResource Include="Images\wifi.png" />
+    <EmbeddedResource Include="Images\xamarin_logo.png" />
   </ItemGroup>
 </Project>
