--- a/DestoPesto/DestoPesto.iOS/DestoPesto.iOS.csproj
+++ b/DestoPesto/DestoPesto.iOS/DestoPesto.iOS.csproj
@@ -78,6 +78,7 @@
     <AppExtensionDebugBundleId />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="DeviceCore.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="ImageResizer.cs" />
     <Compile Include="UploadData.cs" />
