iOS Facebook Login

--- a/DestoPesto/DestoPesto.iOS/Info.plist
+++ b/DestoPesto/DestoPesto.iOS/Info.plist
@@ -66,11 +66,11 @@
 		</dict>
 	</array>
 	<key>FacebookAppID</key>
-	<string>479499616808537</string>
+	<string>1710976555958732</string>
 	<key>FacebookClientToken</key>
-	<string>568c48b86af36d00b00d597429e990c1</string>
+	<string>fe32ca907bf16331f72ba8f8b1416d37</string>
 	<key>FacebookDisplayName</key>
-	<string>toposmou</string>
+	<string>destopesto</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
