Icons for iPhone

--- a/DestoPesto/DestoPesto.iOS/Info.plist
+++ b/DestoPesto/DestoPesto.iOS/Info.plist
@@ -32,8 +32,6 @@
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
 	<string>DestoPesto</string>
-	<key>XSAppIconAssets</key>
-	<string>Assets.xcassets/AppIcon.appiconset</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>New Entry</string>
 	<key>UIBackgroundModes</key>
@@ -82,5 +80,7 @@
 	</array>
 	<key>NSCameraUsageDescription</key>
 	<string>New Entry</string>
+	<key>XSAppIconAssets</key>
+	<string>Media.xcassets/AppIcons.appiconset</string>
 </dict>
 </plist>
