--- a/DestoPesto/DestoPesto.iOS/Info.plist
+++ b/DestoPesto/DestoPesto.iOS/Info.plist
@@ -31,7 +31,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.arion.destopesto.ios</string>
 	<key>CFBundleVersion</key>
-	<string>1.4.13</string>
+	<string>1.4.15</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
@@ -72,7 +72,7 @@
 		<string>fb-messenger-share-api</string>
 	</array>
 	<key>NSCameraUsageDescription</key>
-	<string>New Entry</string>
+	<string>The application requires access to your device&apos;s camera	</string>
 	<key>XSAppIconAssets</key>
 	<string>Media.xcassets/AppIcons.appiconset</string>
 </dict>
