--- a/DestoPesto/DestoPesto.Android/DestoPesto.Android.csproj
+++ b/DestoPesto/DestoPesto.Android/DestoPesto.Android.csproj
@@ -128,6 +128,7 @@
     <Compile Include="AndroidNotificationManager.cs" />
     <Compile Include="AppTerminate.cs" />
     <Compile Include="BackgroundService.cs" />
+    <Compile Include="BaseUrl_Android.cs" />
     <Compile Include="BrodcastHandler.cs" />
     <Compile Include="ForeGroundService.cs" />
     <Compile Include="ImageResizerNative.cs" />
