--- a/.gitignore
+++ b/.gitignore
@@ -1134,3 +1134,4 @@ FodyWeavers.xsd
 /traffic_signs/Traffic_Sign_GR_-_KOK_Old_P-42.svg
 /traffic_signs/Traffic_Sign_GR_-_Old_-_R-34.svg
 /traffic_signs/Traffic_Sign_GR_-_Old_-_Risk_Of_Fire.svg
+/DestoPesto/DestoPesto/Images/delete1.png
