--- a/Authentication/Authentication.csproj
+++ b/Authentication/Authentication.csproj
@@ -12,4 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2545" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DebugLog\DebugLog.csproj" />
+  </ItemGroup>
 </Project>
