--- a/DestoPesto/DestoPesto/DestoPesto.csproj
+++ b/DestoPesto/DestoPesto/DestoPesto.csproj
@@ -44,6 +44,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>StringResource.resx</DependentUpon>
     </Compile>
+    <Compile Update="Views\SubmisionDetailsPopupPage.xaml.cs">
+      <SubType>Code</SubType>
+      <DependentUpon>SubmisionDetailsPopupPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Update="Properties\Resources.resx">
@@ -76,6 +80,10 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\SignInPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\SubmisionDetailsPopupPage.xaml">
+      <SubType>Designer</SubType>
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\SubmisionPopupPage.xaml">
