--- a/DestoPesto/DestoPesto/DestoPesto.csproj
+++ b/DestoPesto/DestoPesto/DestoPesto.csproj
@@ -104,6 +104,9 @@
     <EmbeddedResource Update="Views\SubmisionsListPageFlyout.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\UserProfilePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Remove="ButtonCircleBig.png" />
