--- a/DestoPesto/DestoPesto.iOS/DestoPesto.iOS.csproj
+++ b/DestoPesto/DestoPesto.iOS/DestoPesto.iOS.csproj
@@ -79,13 +79,10 @@
     <CodesignProvision>Automatic</CodesignProvision>
     <ConsolePause>true</ConsolePause>
     <ExternalConsole>false</ExternalConsole>
-    <Commandlineparameters>
-    </Commandlineparameters>
+    <Commandlineparameters></Commandlineparameters>
     <RunWithWarnings>true</RunWithWarnings>
-    <PackagingExtraArgs>
-    </PackagingExtraArgs>
-    <EnablePackageSigning>
-    </EnablePackageSigning>
+    <PackagingExtraArgs></PackagingExtraArgs>
+    <EnablePackageSigning></EnablePackageSigning>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'Default' ">
     <AppExtensionDebugBundleId />
@@ -131,21 +128,21 @@
       <Version>8.0.76</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Build.Download">
-      <Version>0.11.4</Version>
+      <Version>0.11.3</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Firebase.iOS.Auth">
-      <Version>8.10.0.3</Version>
+      <Version>8.10.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Firebase.iOS.CloudMessaging">
       <Version>8.10.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Firebase.iOS.Core">
-      <Version>8.10.0.3</Version>
+      <Version>8.10.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2622" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.8.1" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2545" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.8.0" />
     <PackageReference Include="Xamarin.Forms.Maps">
-      <Version>5.0.0.2622</Version>
+      <Version>5.0.0.2545</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
