--- a/DestoPesto/DestoPesto.iOS/DestoPesto.iOS.csproj
+++ b/DestoPesto/DestoPesto.iOS/DestoPesto.iOS.csproj
@@ -83,6 +83,7 @@
     <RunWithWarnings>true</RunWithWarnings>
     <PackagingExtraArgs></PackagingExtraArgs>
     <EnablePackageSigning></EnablePackageSigning>
+    <BuildIpa></BuildIpa>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'Default' ">
     <AppExtensionDebugBundleId />
